fix: icons inside button alignment

--- a/frontend/src/scss/layout/_container.scss
+++ b/frontend/src/scss/layout/_container.scss
@@ -57,6 +57,11 @@ $pad-md: rem(81);
 .icon-button {
 	@extend %icon-text-box !optional;
 	justify-content: center;
+
+	&::before,
+	&::after {
+		line-height: 0;
+	}
 }
 
 .time-caption,
